# Generated by Django 5.2.4 on 2025-07-31 09:39

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='CashDay',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date', models.DateField(unique=True, verbose_name='Дата')),
                ('cash_sales_total', models.DecimalField(decimal_places=2, default=0, max_digits=12, verbose_name='Общая сумма наличных продаж')),
                ('cash_sales_count', models.PositiveIntegerField(default=0, verbose_name='Количество наличных продаж')),
                ('card_sales_total', models.DecimalField(decimal_places=2, default=0, max_digits=12, verbose_name='Общая сумма продаж картой')),
                ('card_sales_count', models.PositiveIntegerField(default=0, verbose_name='Количество продаж картой')),
                ('total_sales', models.DecimalField(decimal_places=2, default=0, max_digits=12, verbose_name='Итоговая выручка за день')),
                ('is_closed', models.BooleanField(default=False, verbose_name='День закрыт')),
            ],
            options={
                'verbose_name': 'Торговый день',
                'verbose_name_plural': 'Торговые дни',
            },
        ),
        migrations.CreateModel(
            name='SaleEvent',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('event_type', models.CharField(choices=[('sale', 'Продажа'), ('price_request', 'Запрос цены'), ('order', 'Заказ'), ('custom_order_sale', 'Продажа заказного товара'), ('return', 'Возврат товара'), ('fitting', 'Примерка товара')], max_length=20, verbose_name='Тип события')),
                ('payment_type', models.CharField(choices=[('cash', 'Наличные'), ('card', 'Карта'), ('none', 'Без оплаты')], default='none', max_length=10, verbose_name='Тип оплаты')),
                ('amount', models.DecimalField(decimal_places=2, default=0, max_digits=10, verbose_name='Сумма')),
                ('timestamp', models.DateTimeField(auto_now_add=True, verbose_name='Время события')),
                ('notes', models.TextField(blank=True, null=True, verbose_name='Комментарий')),
                ('cash_day', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='cashday.cashday', verbose_name='Торговый день')),
            ],
        ),
    ]
